non_executable_reasons_record/703.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%sh

cat << EOF >> ~/.ipython/profile_mpi/ipcluster_config.py
c.IPClusterEngines.engine_launcher_class = 'MPI'
c.IPClusterStart.controller_launcher_class = 'MPI'
EOF

------------------

[0;36m  File [0;32m"<ipython-input-1-ec022dd62f6b>"[0;36m, line [0;32m3[0m
[0;31m    %%sh[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-ec022dd62f6b>, line 3)

Executability                            : False
